--- a/src/index.scss
+++ b/src/index.scss
@@ -27,7 +27,8 @@ main {
 
 main.container {
   align-items: center;
-  background-image: url('/public/bg.jpg'), url('/bg.jpg');
+  // background-image: url('../public/bg.jpg'), url('/bg.jpg');
+  background-image: url('bg.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100vw;
